<resources>
    <string name="app_name">UI_Control</string>
    <string name="HelloWorld">HelloWorld</string>
    <string name="username_msg">用户名：</string>
    <string name="username_hint">请输入用户名</string>
    <string name="password_msg">密码：</string>
    <string name="password_hint">请输入密码</string>
    <string name="header">UI中常用控件练习</string>
    <string name="height_msg">身高：</string>
    <string name="weight_msg">体重：</string>
    <string name="height_hint">请输入身高(/cm)</string>
    <string name="weight_hint">请输入体重(/kg)</string>
    <string name="reset_msg">重置</string>
    <string name="compute_msg">计算</string>
    <string name="male_msg">男</string>
    <string name="female_msg">女</string>
    <string name="icon_msg">light</string>
    <string name="off">关</string>
    <string name="on">开</string>
</resources>